Fix holiday profile theme
Showcases still overlap a bit though

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -2481,6 +2481,22 @@ img.astats_icon {
   backdrop-filter: none !important;
 }
 
+.es_profile_style.holidayprofile .persona_name,
+.es_profile_style.holidayprofile .profile_customization_header { /* Makes links clickable */
+  position: initial !important; 
+}
+
+.es_profile_style.holidayprofile .profile_customization:not(.none_selected)::before {
+  z-index: -1;
+}
+
+.es_profile_style.holidayprofile .profile_customization {
+  background-position-x: -2px !important;
+}
+.es_profile_style.holidayprofile .profile_customization_header {
+  background: none !important;
+}
+
 /***************************************
  * Site wide
  * add_enhanced_steam_options()
